; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_scoreboard.c_fpm_scoreboard_proc_release.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_scoreboard.c_fpm_scoreboard_proc_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fpm_scoreboard_proc_s = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fpm_scoreboard_proc_release(%struct.fpm_scoreboard_proc_s* %0) #0 {
  %2 = alloca %struct.fpm_scoreboard_proc_s*, align 8
  store %struct.fpm_scoreboard_proc_s* %0, %struct.fpm_scoreboard_proc_s** %2, align 8
  %3 = load %struct.fpm_scoreboard_proc_s*, %struct.fpm_scoreboard_proc_s** %2, align 8
  %4 = icmp ne %struct.fpm_scoreboard_proc_s* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %9

6:                                                ; preds = %1
  %7 = load %struct.fpm_scoreboard_proc_s*, %struct.fpm_scoreboard_proc_s** %2, align 8
  %8 = getelementptr inbounds %struct.fpm_scoreboard_proc_s, %struct.fpm_scoreboard_proc_s* %7, i32 0, i32 0
  store i64 0, i64* %8, align 8
  br label %9

9:                                                ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
